<resources>
    <!-- General -->
    <string name="app_name">Github Portal</string>
    <string name="exit_message">¿Desea salir de la aplicación?</string>

    <!-- Buttons -->
    <string name="button_exit">Exit</string>
    <string name="button_retry">Retry</string>

    <!-- General errors -->
    <string name="network_error_title">Connection error</string>
    <string name="network_error_message">Something went wrong. Please, check your connection status.</string>

    <string name="server_error_title">Server error</string>
    <string name="server_error_message">Something went wrong with the server. Please, exit the App or try it again.</string>

    <string name="parsing_error_title">Response error</string>
    <string name="parsing_error_message">Something went wrong parsing the response. Please, exit the App or try it.</string>

    <string name="unknown_error_title">Unexpected error</string>
    <string name="unknown_error_message">An unexpected error happened. Please, restart the App.</string>
    <string name="unknown_error_message_with_details">%s\n\n[ERROR: %s]</string>

    <!-- Github repositories list fragment -->
    <string name="repositories_list_fragment_label">Github Repositories</string>
    <string name="repositories_list_empty_error_title">No repositories</string>
    <string name="repositories_list_empty_error_message">There are no repositories. Please, exit the App.</string>
    <string name="github_repository_license">License: %s</string>
    <string name="github_repository_language">Language: %s</string>
    <string name="github_repositories_list_filter_kotlin">Kotlin</string>
    <string name="github_repositories_list_filter_swift">Swift</string>
    <string name="github_repositories_list_filter_javascript">Javascript</string>
    <string name="github_repositories_list_filter_go">Go</string>
    <string name="github_repositories_list_sort_label">Sort by</string>
    <string-array name="github_repositories_list_sort_options">
        <item>Stars</item>
        <item>Forks</item>
        <item>Help-wanted issues</item>
        <item>Updated</item>
    </string-array>

    <!-- Github repository detail fragment -->
    <string name="repository_detail_fragment_label">Github Repositories</string>
    <string name="repository_detail_owner_image_content_description">Owner avatar</string>
    <string name="repository_detail_owner_name_label">Owner</string>
    <string name="repository_detail_link_label">Link</string>
    <string name="repository_detail_language_label">Language</string>
    <string name="repository_detail_license_label">License</string>
</resources>