<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.jorcollmar.githubportal.ui.githubrepositories.GithubPortalActivity">

    <group
        android:id="@+id/filterGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_filter_kotlin"
            android:checked="true"
            android:orderInCategory="101"
            android:title="@string/github_repositories_list_filter_kotlin"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_swift"
            android:orderInCategory="102"
            android:title="@string/github_repositories_list_filter_swift"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_javascript"
            android:orderInCategory="103"
            android:title="@string/github_repositories_list_filter_javascript"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_go"
            android:orderInCategory="104"
            android:title="@string/github_repositories_list_filter_go"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_by"
        android:orderInCategory="100"
        android:title="@string/github_repositories_list_sort_label"
        app:showAsAction="ifRoom" />
</menu>